add detail page & remove course in Timetable
1. 点击课程卡片会出现详情页面
2. 可以通过详情页面的删除按钮删除课程

--- a/src/scss/_timetable.scss
+++ b/src/scss/_timetable.scss
@@ -120,8 +120,8 @@ $colors: (
   color: darken($color, 40%);
   background-color: $color;
 
-  &:hover,
-  &.hover {
+  &.hoverable:hover,
+  &.hoverable.hover {
     background-color: darken($color, 10%);
   }
 }
