feat(Timetable): adjsut layout of searchbar

--- a/src/scss/_timetable.scss
+++ b/src/scss/_timetable.scss
@@ -8,6 +8,8 @@
 $cell-height: 64px;
 $cell-width: 64px;
 
+$search-bar-height: 14.5 * $cell-height;
+
 .background-one {
   background-color: transparent;
 }
