--- a/src/scss/mark.scss
+++ b/src/scss/mark.scss
@@ -9,6 +9,7 @@
   h1, h2, h3, h4, h5, h6, li, ul, p {
       color: rgba(black, $active-opacity);
       line-height: $line-height;
+      font-weight: normal;
   }
 
   //Spacing
