refactor(userstatus): refactor user-status UI

--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -1,4 +1,4 @@
-@import "./config.scss";
+@import "./_config.scss";
 
 ///////////////////////////////////////////////////////////
 // Plain SASS Trigonometry Algorithm in Taylor Expansion //
