--- a/src/components/listCard/listCard.scss
+++ b/src/components/listCard/listCard.scss
@@ -1,4 +1,35 @@
 .list-card {
   border-radius: 4px;
   background-color: #fff;
+  //border: 3px solid #7edfe7;
+  box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.1);
+  margin: 1px 1px 8px 1px;
+
+  > .list-card__avatar-field{
+    float: left;
+  }
+
+  > .list-card__top-field{
+    height: 32px;
+  }
+
+  > .list-card__main-field{
+    min-height: 22px;
+  }
+
+  > .list-card__bottom-field{
+    height: 25px;
+  }
+}
+
+.float-left {
+  float: left;
+  position: relative;
+  left: 6px;
+}
+
+.float-right {
+  float: right;
+  position: relative;
+  right: 10px;
 }
