--- a/src/components/listCard/listCard.scss
+++ b/src/components/listCard/listCard.scss
@@ -4,32 +4,40 @@
   //border: 3px solid #7edfe7;
   box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.1);
   margin: 1px 1px 8px 1px;
-
-  > .list-card__avatar-field{
-    float: left;
-  }
-
-  > .list-card__top-field{
-    height: 32px;
-  }
+  padding: 2px 10px;
 
   > .list-card__main-field{
-    min-height: 22px;
+      display: flex;
+
+      > .list-card__avatar-field{
+        position: relative;
+        flex: 1;
+      }
+
+      > .list-card__content-field {
+          flex: 6;
+          
+          > .list-card__top-field{
+            height: 26px;
+          }
+
+          > .list-card__middle-field{
+            min-height: 22px;
+          }
+      }
   }
 
   > .list-card__bottom-field{
-    height: 25px;
+    height: 22px;
   }
 }
 
 .float-left {
   float: left;
   position: relative;
-  left: 6px;
 }
 
 .float-right {
   float: right;
   position: relative;
-  right: 10px;
 }
