--- a/src/components/listCard/listCard.scss
+++ b/src/components/listCard/listCard.scss
@@ -1,9 +1,9 @@
 .list-card {
   border-radius: 8px;
   background-color: #fff;
-  //border: 3px solid #7edfe7;
-  box-shadow: 0 4px 8px 1px rgba(0, 0, 0, 0.1);
-  margin: 8px 1px 8px 1px;
+  // border: 3px solid #7edfe7;
+  box-shadow: 0px 4px 5px 2px rgba(130, 155, 170, 0.19);
+  // margin: 8px 1px 8px 1px;
   padding: 3px 10px;
 
   > .list-card__main-field {
