feat(cards): starred heart style and more mock data added

--- a/src/components/listCard/listCard.scss
+++ b/src/components/listCard/listCard.scss
@@ -3,7 +3,7 @@
   background-color: #fff;
   // border: 3px solid #7edfe7;
   box-shadow: 0px 4px 5px 2px rgba(130, 155, 170, 0.19);
-   //margin: 8px 1px 8px 1px;
+  margin: 8px 1px 8px 1px;
   padding: 3px 10px;
 
   > .list-card__main-field {
