fix(cards): changed event name, resolved FIcon

--- a/src/components/listCard/listCard.scss
+++ b/src/components/listCard/listCard.scss
@@ -12,6 +12,7 @@
         max-width: 60px;
         flex: 1;
         margin-right: 6px;
+        cursor: pointer;
       }
 
       > .list-card__content-field {
