--- a/src/components/listCard/listCard.scss
+++ b/src/components/listCard/listCard.scss
@@ -2,6 +2,7 @@
   border-radius: 8px;
   background-color: #fff;
   // border: 3px solid #7edfe7;
+  margin-bottom: 8px;
   box-shadow: 0px 4px 5px 2px rgba(130, 155, 170, 0.19);
   padding: 10px 13px;
 
