--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,2 +1,7 @@
 $primary-color: #60bdca;
-$danger-color: #ef755a;
+$color-red: #ef755a;
+
+$gray2: #4f4f4f;
+$gray3: #828282;
+
+$head-margin: 14px;
