--- a/src/scss/_clickable.scss
+++ b/src/scss/_clickable.scss
@@ -2,6 +2,6 @@
   cursor: pointer;
   transition: opacity 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   &:hover {
-    opacity: 70%;
+    opacity: 0.7;
   }
 }
