fix(listCard): 修复课程名超出卡片的问题

--- a/src/components/listCard/listCard.scss
+++ b/src/components/listCard/listCard.scss
@@ -17,7 +17,8 @@
       }
 
       > .list-card__content-field {
-          flex: 6;
+          flex: 1;
+          width: 100%;
           
           > .list-card__top-field {
             height: 28px;
