fix(app): 将底部导航栏布局由 fix 改为 flex

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,16 @@
 .f-clickable {
   @apply cursor-pointer hover:opacity-80 transition-opacity select-none;
 }
+
+.f-hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  scrollbar-color: transparent transparent;
+  min-width: unset;
+}
+
+.f-hide-scrollbar::-webkit-scrollbar {
+  display: none;
+  min-width: inherit;
+  background-color: transparent;
+}
