refactor(common.scss): 替换 $gray2

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,4 +1,4 @@
 $primary-color: #60bdca;
 
-$gray2: #4f4f4f;
-$gray3: #828282;
+$gray2: #4f4f4f; // text-gray-600
+$gray3: #828282; // text-gray-500
